apps/nowait/base/deployment-waiting-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waiting-worker
  labels:
    app.kubernetes.io/name: waiting-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: waiting-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: waiting-worker
        app.kubernetes.io/part-of: nowait
    spec:
      serviceAccountName: nowait-worker
      containers:
        - name: waiting-worker
          image: nowait-app:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
