apps/nowait/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: nowait-api
  labels:
    app.kubernetes.io/name: nowait-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nowait-api
  ports:
    - name: http
      port: 80
      targetPort: http
